src/objects/Payment_Retry__c.object
<CustomObject>
    <fields>
        <fullName>CL_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CL Contract</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Payment Retry</relationshipLabel>
        <relationshipName>Payment_Retry</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Debit_amount__c</fullName>
        <label>Debit amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retry_Attempted_On__c</fullName>
        <label>Retry Attempted On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retry_Attempted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retry Attempted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <label>Payment Retry</label>
    <nameField>
        <label>Payment Retry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Retry</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>